# wcjs-player

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  package.json  test.js
lib/: bindings.js  player.js
src/: JsVlcAudio.cpp  JsVlcAudio.h  JsVlcDeinterlace.cpp  JsVlcDeinterlace.h  JsVlcInput.cpp  JsVlcInput.h  JsVlcMedia.cpp  JsVlcMedia.h  JsVlcPlayer.cpp  JsVlcPlayer.h  JsVlcPlaylist.cpp  JsVlcPlaylist.h  JsVlcPlaylistItems.cpp  JsVlcPlaylistItems.h  JsVlcSubtitles.cpp  JsVlcSubtitles.h  JsVlcVideo.cpp  JsVlcVideo.h  VlcVideoOutput.cpp  VlcVideoOutput.h  WebChimera.cpp  helpers.h
src/dlopen/: win32-dlfcn.cc  win32-dlfcn.h
